--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,32 @@
 {
-    "require": {
-        "symfony/console": "^3.1",
-        "guzzlehttp/guzzle": "~6.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Wbs\\": "src/"
-        }
-    },
-    "require-dev": {
-        "phpspec/phpspec": "^2.5"
+  "name": "truetamtam/webasyst-installer",
+  "description": "Webasyst framework and shop-script installer. For development.",
+  "keywords": [
+    "webasyst",
+    "shop-script"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Ulashev Roman",
+      "email": "truetamtam@yandex.ru"
     }
+  ],
+  "require": {
+    "symfony/console": "^3.1",
+    "guzzlehttp/guzzle": "~6.0"
+  },
+  "repositories": [
+    {
+      "url": "/c/Users/DC/Desktop/wbsconsole/wbs"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Wbs\\": "src/"
+    }
+  },
+  "bin": [
+    "webasyst"
+  ]
 }
