--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,9 @@
   ],
   "require": {
     "symfony/console": "^3.1",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "symfony/filesystem": "^3.1"
   },
-  "repositories": [
-    {
-      "url": "/c/Users/DC/Desktop/wbsconsole/wbs"
-    }
-  ],
   "autoload": {
     "psr-4": {
       "Wbs\\": "src/"
