--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "truetamtam/webasyst-dev",
+  "replace": {"truetamtam/webasyst-installer": "self.version"}
   "description": "Webasyst developer toolbox. Webasyst framework and shop-script installer.",
   "keywords": [
     "webasyst",
